--- a/README.html
+++ b/README.html
@@ -377,13 +377,13 @@ best-practice technique ensures that your reports and dashboards are
 always updated and proper version control is enacted. We encourage
 publishers to use the following workflow:</p>
 <ol style="list-style-type: lower-roman">
-<li>In your project, create a “dev” branch to deploy from</li>
-<li>Deploy the “dev” branch to Posit Connect as private</li>
-<li>Once you’re happy with the deployment, merge your “dev” branch to
-“main”</li>
-<li>Deploy your “main” branch publicly</li>
-<li>Iteratively merge in future “dev” branches to update your “main”
-deployment</li>
+<li><p>In your project, create a “dev” branch to deploy from</p></li>
+<li><p>Deploy the “dev” branch to Posit Connect as private</p></li>
+<li><p>Once you’re happy with the deployment, merge your “dev” branch to
+“main”</p></li>
+<li><p>Deploy your “main” branch publicly</p></li>
+<li><p>Iteratively merge in future “dev” branches to update your “main”
+deployment</p></li>
 </ol>
 <div id="in-your-project" class="section level3">
 <h3>In your project</h3>
