expand on dev; add emails

--- a/README.html
+++ b/README.html
@@ -381,7 +381,8 @@ publishers to use the following workflow:</p>
 <li><p>Deploy the “dev” branch to Posit Connect as private</p></li>
 <li><p>Once you’re happy with the deployment, merge your “dev” branch to
 “main”</p></li>
-<li><p>Deploy your “main” branch publicly</p></li>
+<li><p>Deploy your “main” branch publicly; delete “dev”
+deployment</p></li>
 <li><p>Iteratively merge in future “dev” branches to update your “main”
 deployment</p></li>
 </ol>
@@ -418,6 +419,7 @@ and merged it in, select your “main” branch</li>
 <li>Title your content. For clarity, if this is a “dev” branch, please
 title your content as “[dev]_{your_title}”</li>
 <li>Select “Deploy Content”</li>
+<li>If deploying for production, delete your “dev” deployment</li>
 </ol>
 </div>
 <div id="publishing-options" class="section level3">
@@ -469,6 +471,7 @@ will pull up the log of your content. In here, you will be able to see
 both the posit connect log and a log that looks like your typical R
 console. Here, you will find error messages, making this a great place
 to start if your app or document is not publishing correctly</li>
+<li>For additonal help, please reach out to Cole Brokamp at <a href="mailto:cole.brokamp@cchmc.org" class="email">cole.brokamp@cchmc.org</a> or Andrew Vancil at <a href="mailto:andrew.vancil@cchmc.org" class="email">andrew.vancil@cchmc.org</a></li>
 </ul>
 </div>
 </div>
