add link to documentation

--- a/README.html
+++ b/README.html
@@ -471,6 +471,8 @@ will pull up the log of your content. In here, you will be able to see
 both the posit connect log and a log that looks like your typical R
 console. Here, you will find error messages, making this a great place
 to start if your app or document is not publishing correctly</li>
+<li>For more information on git-backed deployment, please see the
+documentation <a href="https://docs.posit.co/connect/user/git-backed/">here</a>.</li>
 <li>For additonal help, please reach out to Cole Brokamp at <a href="mailto:cole.brokamp@cchmc.org" class="email">cole.brokamp@cchmc.org</a> or Andrew Vancil at <a href="mailto:andrew.vancil@cchmc.org" class="email">andrew.vancil@cchmc.org</a></li>
 </ul>
 </div>
