add note about data validation

--- a/README.html
+++ b/README.html
@@ -496,6 +496,10 @@ notebook. In here, you will be able to see both the posit connect log
 and a log that looks like your typical R console from each deployment
 instance. Explore these to find your error messages and begin
 troubleshooting. Further troubleshooting tips <a href="https://docs.posit.co/connect/user/troubleshooting/">here</a>.</p>
+<p>If your content is a regularly rendered report, especially with
+living data sources, we encourage developers to employ data validation.
+Two great packages to get started with are <a href="https://appsilon.github.io/data.validator/">{data.validator}</a>
+and <a href="https://rstudio.github.io/pointblank/">{pointblank}</a>.</p>
 <p>For more information on git-backed deployment, please see the
 documentation <a href="https://docs.posit.co/connect/user/git-backed/">here</a>.</p>
 <p>For additional help, please reach out to Cole Brokamp at <a href="mailto:cole.brokamp@cchmc.org" class="email">cole.brokamp@cchmc.org</a> or Andrew Vancil at <a href="mailto:andrew.vancil@cchmc.org" class="email">andrew.vancil@cchmc.org</a></p>
